=== 1.1.0 / 2011-10-18
* Added an option to make requests through a proxy server (thanks bardsley!)

=== 1.0.1 / 2011-09-23
* Added a scale parameter to the map (thanks backspace!)

=== 1.0.0 / 2011-07-21
* An explicitly set map center is now properly encoded - was previously being doubly encoded (thanks abecciu)
* Gem will now load on some bad Rubygems installations (path issue)
* Version 1.0, yeah!

=== 0.1.5 / 2011-02-08
* Fixed bug which caused require 'googlestaticmap' to not work on some versions of Ruby

=== 0.1.4 / 2010-08-21
* Added unit tests

=== 0.1.2 / 2010-08-20
* Now works in Ruby 1.8 as well as 1.9
* Fixed a bug when getting a map without specifying a file

=== 0.1.0 / 2010-08-19
* Initial release