@@ -1,3 +1,7 @@
+This fork:
+* Use the new Google Maps API URL over HTTPS.
+* Remove get_map (which didn't work).
+
 === 1.1.0 / 2011-10-18
 * Added an option to make requests through a proxy server (thanks bardsley!)
 
